--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.9.1
 appdirs==1.4.3
 click==6.7
+contextlib2==0.5.4
 Flask==0.12
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
@@ -10,8 +11,10 @@ Jinja2==2.9.5
 Mako==1.0.6
 MarkupSafe==1.0
 packaging==16.8
+passlib==1.7.1
 pyparsing==2.2.0
 python-editor==1.0.3
+raven==6.0.0
 six==1.10.0
 SQLAlchemy==1.1.6
 Werkzeug==0.12.1
