--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ Flask==0.12
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
+gunicorn==19.7.0
 itsdangerous==0.24
 Jinja2==2.9.5
 Mako==1.0.6
 MarkupSafe==1.0
 packaging==16.8
 passlib==1.7.1
+psycopg2==2.7.1
 pyparsing==2.2.0
 python-editor==1.0.3
 raven==6.0.0
