--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==0.12
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
 gunicorn==19.7.0
 itsdangerous==0.24
 Jinja2==2.9.5
