--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ psycopg2==2.7.1
 pyparsing==2.2.0
 python-editor==1.0.3
 raven==6.0.0
+redis==2.10.5
 six==1.10.0
 SQLAlchemy==1.1.6
 Werkzeug==0.12.1
