--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Migrate==2.0.3
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
+Flask-WTF==0.14.2
 gunicorn==19.7.0
 itsdangerous==0.24
 Jinja2==2.9.5
@@ -23,3 +24,4 @@ redis==2.10.5
 six==1.10.0
 SQLAlchemy==1.1.6
 Werkzeug==0.12.1
+WTForms==2.1
