--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ contextlib2==0.5.4
 Flask==0.12
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
+Flask-Session==0.3.1
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
 Flask-WTF==0.14.2
