add a default redis connection URL

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ export DATABASE_URL=postgres://localhost/{{APP_SLUG}}
 export TEST_DATABASE_URL=postgres://localhost/{{APP_SLUG}}_test
 
 # Redis
-export REDIS_URL=
+export REDIS_URL=redis://127.0.0.1:6379
 
 # Don't set locally, otherwise sentry gets noisy
 # export SENTRY_DSN=
