--- a/.env
+++ b/.env
@@ -7,5 +7,9 @@ export TEST_DATABASE_URL=postgres://localhost/{{APP_SLUG}}_test
 # Redis
 export REDIS_URL=redis://127.0.0.1:6379
 
+# Email
+# export MAILGUN_DOMAIN=
+# export MAILGUN_API_KEY=
+
 # Don't set locally, otherwise sentry gets noisy
 # export SENTRY_DSN=
