--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==0.9.1
 appdirs==1.4.3
 blinker==1.4
+certifi==2017.11.5
+chardet==3.0.4
 click==6.7
 contextlib2==0.5.4
 Flask==0.12
@@ -11,6 +13,7 @@ Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
 Flask-WTF==0.14.2
 gunicorn==19.7.0
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.5
 Mako==1.0.6
@@ -22,7 +25,9 @@ pyparsing==2.2.0
 python-editor==1.0.3
 raven==6.0.0
 redis==2.10.5
+requests==2.18.4
 six==1.10.0
 SQLAlchemy==1.1.6
+urllib3==1.22
 Werkzeug==0.12.1
 WTForms==2.1
