update required libs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,35 @@
-alembic==0.9.1
+alembic==1.0.0
 appdirs==1.4.3
 blinker==1.4
-certifi==2017.11.5
+certifi==2018.4.16
 chardet==3.0.4
 click==6.7
-contextlib2==0.5.4
-Flask==0.12
-Flask-Migrate==2.0.3
-Flask-Script==2.0.5
+contextlib2==0.5.5
+Flask==1.0.2
+Flask-Migrate==2.2.1
+Flask-Script==2.0.6
 Flask-Session==0.3.1
-Flask-SQLAlchemy==2.2
-Flask-Testing==0.6.2
+Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
-gunicorn==19.7.0
-idna==2.6
+gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
-Jinja2==2.9.5
-Mako==1.0.6
+Jinja2==2.10
+Mako==1.0.7
 MarkupSafe==1.0
-packaging==16.8
+packaging==17.1
 passlib==1.7.1
-psycopg2==2.7.1
+psycopg2==2.7.5
 pyparsing==2.2.0
+python-dateutil==2.7.3
+python-dotenv==0.8.2
 python-editor==1.0.3
-raven==6.0.0
-redis==2.10.5
-requests==2.18.4
-six==1.10.0
-SQLAlchemy==1.1.6
-urllib3==1.22
-Werkzeug==0.12.1
-WTForms==2.1
+raven==6.9.0
+redis==2.10.6
+requests==2.19.1
+six==1.11.0
+SQLAlchemy==1.2.10
+urllib3==1.23
+Werkzeug==0.14.1
+WTForms==2.2.1
