--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ export REDIS_URL=redis://127.0.0.1:6379
 
 # Don't set locally, otherwise sentry gets noisy
 # export SENTRY_DSN=
+
+# For local development server SSL settings
+# export LOCAL_SSL_CERT_PATH=local.{{APP_SLUG}}.com.pem
+# export LOCAL_SSL_KEY_PATH=local.{{APP_SLUG}}.com-key.pem
