add psycopg2-binary to squash deprecation warning

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ MarkupSafe==1.0
 packaging==17.1
 passlib==1.7.1
 psycopg2==2.7.5
+psycopg2-binary==2.7.7
 pyparsing==2.2.0
 python-dateutil==2.7.3
 python-dotenv==0.8.2
