--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
-alembic==1.0.0
-appdirs==1.4.3
-blinker==1.4
-certifi==2018.4.16
-chardet==3.0.4
-click==6.7
-contextlib2==0.5.5
-Flask==1.0.2
-Flask-Migrate==2.2.1
-Flask-Script==2.0.6
-Flask-Session==0.3.1
-Flask-SQLAlchemy==2.3.2
-Flask-Testing==0.7.1
-Flask-WTF==0.14.2
-gunicorn==19.9.0
-idna==2.7
-itsdangerous==0.24
-Jinja2==2.10.1
-Mako==1.0.7
-MarkupSafe==1.0
-packaging==17.1
-passlib==1.7.1
-psycopg2==2.7.5
-psycopg2-binary==2.7.7
-pyparsing==2.2.0
-python-dateutil==2.7.3
-python-dotenv==0.8.2
-python-editor==1.0.3
-raven==6.9.0
-redis==2.10.6
-requests==2.20.0
-six==1.11.0
-SQLAlchemy==1.3.0
-urllib3==1.25.7
-Werkzeug==0.15.3
-WTForms==2.2.1
+alembic
+appdirs
+blinker
+certifi
+chardet
+click
+contextlib2
+Flask
+Flask-Migrate
+Flask-Script
+Flask-Session
+Flask-SQLAlchemy
+Flask-Testing
+Flask-WTF
+gunicorn
+idna
+itsdangerous
+Jinja2
+Mako
+MarkupSafe
+packaging
+passlib
+psycopg2
+psycopg2-binary
+pyparsing
+python-dateutil
+python-dotenv
+python-editor
+raven
+redis
+requests
+six
+SQLAlchemy
+urllib3
+Werkzeug
+WTForms
