--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ export DATABASE_URL=postgres://localhost/{{APP_SLUG}}
 export TEST_DATABASE_URL=postgres://localhost/{{APP_SLUG}}_test
 
 # Redis
-export REDIS_URL=redis://127.0.0.1:6379
+# export REDIS_URL=redis://127.0.0.1:6379
 
 # Email
 # export MAILGUN_DOMAIN=
