--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 workon {{APP_SLUG}}
 
 # Database
-export DATABASE_URL=postgres://localhost/{{APP_SLUG}}
-export TEST_DATABASE_URL=postgres://localhost/{{APP_SLUG}}_test
+export DATABASE_URL=postgresql://localhost/{{APP_SLUG}}
+export TEST_DATABASE_URL=postgresql://localhost/{{APP_SLUG}}_test
 
 # Redis
 # export REDIS_URL=redis://127.0.0.1:6379
