switch from autoenv to direnv

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,6 @@
-workon {{APP_SLUG}}
+layout python3
+
+export FLASK_ENV=development
 
 # Database
 export DATABASE_URL=postgresql://localhost/{{APP_SLUG}}
