enable redis-based sessions by default

--- a/.envrc
+++ b/.envrc
@@ -7,7 +7,7 @@ export DATABASE_URL=postgresql://localhost/{{APP_SLUG}}
 export TEST_DATABASE_URL=postgresql://localhost/{{APP_SLUG}}_test
 
 # Redis
-# export REDIS_URL=redis://127.0.0.1:6379
+export REDIS_URL=redis://127.0.0.1:6379
 
 # Email
 # export MAILGUN_DOMAIN=
