--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       FLASK_ENV: development
       DATABASE_URL: postgresql://postgres:local_pass@db/{{APP_SLUG}}
+      REDIS_URL: redis://cache:6379
     volumes:
       - .:/flask-app
     depends_on:
@@ -26,6 +27,11 @@ services:
       POSTGRES_DB: {{APP_SLUG}}
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  cache:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
 
 volumes:
   pgdata:
