make the local DATABASE_URL look more like the docker compose values

--- a/.envrc
+++ b/.envrc
@@ -3,8 +3,8 @@ layout python3
 export FLASK_ENV=development
 
 # Database
-export DATABASE_URL=postgresql://localhost/{{APP_SLUG}}
-export TEST_DATABASE_URL=postgresql://localhost/{{APP_SLUG}}_test
+export DATABASE_URL=postgresql://postgres:local_pass@localhost/{{APP_SLUG}}
+export TEST_DATABASE_URL=postgresql://postgres:local_pass@localhost/{{APP_SLUG}}_test
 
 # Redis
 export REDIS_URL=redis://127.0.0.1:6379
