update local SSL to use app_slug.local instead of local.app_slug.com

--- a/.env
+++ b/.env
@@ -17,5 +17,5 @@ export REDIS_URL=redis://127.0.0.1:6379
 # export SENTRY_DSN=
 
 # For local development server SSL settings
-# export LOCAL_SSL_CERT_PATH=local.{{APP_SLUG}}.com.pem
-# export LOCAL_SSL_KEY_PATH=local.{{APP_SLUG}}.com-key.pem
+# export LOCAL_SSL_CERT_PATH={{APP_SLUG}}.local.pem
+# export LOCAL_SSL_KEY_PATH={{APP_SLUG}}.local-key.pem
