--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ requests = "^2.28.1"
 Flask-DebugToolbar = "^0.13.1"
 Flask-Migrate = "^3.1.0"
 alembic = "^1.8.0"
+python-dotenv = "^0.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
