update connection info to psql + redis

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 export FLASK_ENV=development
 
 # Database
-export DATABASE_URL=postgresql://localhost/{{APP_SLUG}}
-export TEST_DATABASE_URL=postgresql://localhost/{{APP_SLUG}}_test
+export DATABASE_URL=postgresql://postgres:pass@127.0.0.1:5001/{{APP_SLUG}}
+export TEST_DATABASE_URL=postgresql://postgres:pass@127.0.0.1:5001/{{APP_SLUG}}_test
 
 # Redis
-export REDIS_URL=redis://127.0.0.1:6379
+export REDIS_URL=redis://127.0.0.1:5002
 
 # Email
 # export MAILGUN_DOMAIN=
